fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 :root {
-  background-color: #EEE;
+  background-color: "#262626"
 }
 
 .leaflet-container {
   height: 100%;
   width: 100%;
+  background-color: #262626;
 }
